<resources>
    <string name="app_name">TiketSaya</string>
    <string name="slogan">Wisata Jadi Lebih Asik</string>
    <string name="slogan_getstarted">Discover\nThe Beauty\nOf Earth</string>
    <string name="signin">Sign In</string>
    <string name="newaccount">New Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="slogan_create_account">Please fill up the forms below\nfor informations</string>
    <string name="email_address">Email Address</string>
    <string name="cntinue">Continue</string>
    <string name="selfie_time">Selfie Time</string>
    <string name="selfie_time_desc">Let the world knows yourself\nmore better and ever</string>
    <string name="nama">Nama</string>
    <string name="bio">Bio</string>
    <string name="kamuhebat">Kamu Hebat</string>
    <string name="kamuhebat_desc">Selamat datang pada TiketSaya\ndan nikmati wisatamu</string>
    <string name="explorenow">Explore Now</string>
    <string name="mydashboard">My Dashboard</string>
    <string name="gusmanwijaya">Gusman Wijaya</string>
    <string name="traveller">Traveller</string>
    <string name="mainmenus">Main Menus</string>
    <string name="mainmenus_desc">Explore the beauty of world</string>
    <string name="tickettips">TicketTips</string>
    <string name="tickettips_desc">Learn it for many benefits</string>
    <string name="information">Information</string>
    <string name="information_desc">Knowing before travel</string>
    <string name="detail_pisa">The leaning of the Tower of Pisa\ncomes into the story in 1173, when\nconstruction began.</string>
    <string name="buyticket">Buy Ticket</string>
    <string name="ticketdetail">Ticket Details</string>
    <string name="ticketdetail_desc">Check the amount of tickets</string>
    <string name="desc_ticket">Anak yang berumur lebih dari 3 tahun\nwajib membeli tiket untuk masuk\nkedalam landmark</string>
    <string name="pricing">Pricing</string>
    <string name="total_price">Total Price</string>
    <string name="paynow">Pay Now</string>
    <string name="selamatmenikmati">Selamat Menikmati</string>
    <string name="selamatmenikmati_desc">Anda berhasil membeli tiket\ndan selamat berlibur</string>
    <string name="viewticket">View Tickets</string>
    <string name="myticket">My Ticket</string>
    <string name="editprofile">Edit Profile</string>
    <string name="signout">Sign Out</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="refundnow">Refund Now</string>
    <string name="editprofile_desc">We highly suggest you to\nuse the correct informations</string>
    <string name="saveprofile">Save Profile</string>
    <string name="pricing_desc">Your current balance</string>
    <string name="Tripod_Everywhere">Tripod Everywhere</string>
    <string name="Connect_for_any_tourist">Connect for any tourist</string>
    <string name="Dance_and_Foods">Dance and Foods</string>
</resources>
